# nscripts

./: .gitignore  Cargo.toml  Justfile  README.md  default.nix  flake.nix  xs.nix
commands/: closewindow
