[package]
name = "nscripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
env_logger = "0.11.3"
kdl = "4.6.0"
log = "0.4.21"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
simplelog = "0.12.2"

[profile.release]
opt-level = 3
lto = true
